# fastapi-starter

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
scripts/: makemigrations.py  migrate.py
server/: database.py  main.py  models.py  settings.py
sh/: runserver.sh
